--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@types/node": "^22.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -20,6 +21,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
+    "prisma": "^6.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
