--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -15,12 +15,17 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@types/node": "^22.10.0",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "prisma": "^6.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
