--- a/order_service/package.json
+++ b/order_service/package.json
@@ -18,12 +18,18 @@
     "@electric-sql/pglite": "^0.2.15",
     "@sinclair/typebox": "^0.34.13",
     "ajv": "^8.17.1",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
     "express-rate-limiter": "^1.3.1",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
