--- a/order_service/package.json
+++ b/order_service/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
     "express-rate-limiter": "^1.3.1",
+    "kafkajs": "^2.2.4",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
