--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
