--- a/catalog_service/package.json
+++ b/catalog_service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.17.1",
     "@prisma/client": "^6.1.0",
     "@types/node": "^22.10.0",
     "axios": "^1.7.9",
